examples/test/testpolicy1892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1892
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key46: value5
      key35: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value17
          key13: value15
          key22: value0
      podSelector:
        matchLabels:
          key43: value33
          key44: value44
          key1: value9
